--- a/electric_motors/templates/includes/usual_content/banner/index_page/banner.html
+++ b/electric_motors/templates/includes/usual_content/banner/index_page/banner.html
@@ -47,7 +47,7 @@
                                             </div>
                                         </div>
                                         <div class="spacer-30"></div>
-                                        <a class="btn-main mb10 mb-3" href="vehicle-single-1.html">View Specifications</a>
+                                        <a class="btn-main mb10 mb-3" href="{% url 'Vehicles_Data' %}">View Specifications</a>
                                     </div>
                                 </div>
 
@@ -107,7 +107,7 @@
                                             </div>
                                         </div>
                                         <div class="spacer-30"></div>
-                                        <a class="btn-main mb10 mb-3" href="vehicle-single-1.html">View Specifications</a>
+                                        <a class="btn-main mb10 mb-3" href="{% url 'Vehicles_Data' %}">View Specifications</a>
                                     </div>
                                 </div>
 
@@ -167,7 +167,7 @@
                                             </div>
                                         </div>
                                         <div class="spacer-30"></div>
-                                        <a class="btn-main mb10 mb-3" href="vehicle-single-1.html">View Specifications</a>
+                                        <a class="btn-main mb10 mb-3" href="{% url 'Vehicles_Data' %}">View Specifications</a>
                                     </div>
                                 </div>
 
