--- a/electric_motors/templates/includes/home_page/section_4/s4.html
+++ b/electric_motors/templates/includes/home_page/section_4/s4.html
@@ -8,44 +8,23 @@
                 <h2 class="wow fadeInUp">Latest Motors</h2>
             </div>
             <div class="col-lg-4 text-lg-end">
-                <a class="btn-text text-dark wow fadeInLeft" href="vehicles.html">Discover all Motors</a>
+                <a class="btn-text text-dark wow fadeInLeft" href="{% url 'Latest_Vehicles' %}">Discover all Motors</a>
             </div>
         </div>
         <div class="row g-4">
-            <div class="col-lg-4 text-center">
-                <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                    <a href="vehicle-single-1.html">
-                        <img src="{% static 'images/misc/4.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                        <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                    </a>
-                    <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
-                </div>                            
-                <h4 class="mt-3 mb-1">Mzone R100</h4>
-                <p class="mb-0">Ride the Future: Silent, Smooth, Electric</p>                            
-            </div>
-            <div class="col-lg-4 text-center">
-                <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                    <a href="vehicle-single-1.html">
-                        <img src="{% static 'images/misc/m2.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                        <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                    </a>
-                    <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
+            {% for data in vehicle_data %}
+                <div class="col-lg-4 text-center">
+                    <div class="bg-grey p-2 rounded-10px relative hover text-center">
+                        <a href="vehicle-single-1.html">
+                            <img src="{{data.vehicle_image.url}}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
+                            <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
+                        </a>
+                        <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
+                    </div>                            
+                    <h4 class="mt-3 mb-1"><span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">{{data.vehicle_status}}</span>{{data.vehicle_name}}</h4>
+                    <p class="mb-0">{{data.vehicle_product_short_desc}}</p>                            
                 </div>
-                <h4 class="mt-3 mb-1"><span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">New</span>Mzone R200</h4>
-                <p class="mb-0">Redefining Motorcycle Performance.</p>
-            </div>
-            <div class="col-lg-4 text-center">
-                <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                    <a href="vehicle-single-1.html">
-                        <img src="{% static 'images/misc/m3.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                        <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                    </a>
-                    <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
-                </div>
-                <h4 class="mt-3 mb-1">Mzone R300</h4>
-                <p class="mb-0">Where Sustainability Meets Adventure.</p>
-            </div>
-           
+            {% endfor %}
         </div>
     </div>
 </section>
