Add edit and delete functionality to admin dashboard, update alert messages

--- a/electric_motors/templates/contact.html
+++ b/electric_motors/templates/contact.html
@@ -13,45 +13,48 @@
                     <p>Whether you have a question, a suggestion, or just want to say hello, this is the place to do it. Please fill out the form below with your details and message, and we'll get back to you as soon as possible.</p>
 
                     
-                    <form name="contactForm" id="contact_form" class="position-relative z1000" method="post" action="#">
+                    <form name="contactForm" id="contact_form" class="position-relative z1000" method="post" action="{% url 'Contact_Us' %}">
+                        {% csrf_token %}
                         <div class="row gx-4">
                             <div class="col-lg-6 col-md-6 mb10">
                                 <div class="field-set">
                                     <span class="d-label fw-bold">Name</span>
-                                    <input type="text" name="Name" id="name" class="form-control" placeholder="Your Name" required>
+                                    <input type="text" name="Name" id="name" class="form-control" placeholder="Your Name" >
                                 </div>
 
                                 <div class="field-set">
                                     <span class="d-label fw-bold">Email</span>
-                                    <input type="text" name="Email" id="email" class="form-control" placeholder="Your Email" required>
+                                    <input type="text" name="Email" id="email" class="form-control" placeholder="Your Email" >
                                 </div>
 
                                 <div class="field-set">
                                     <span class="d-label fw-bold">Phone</span>
-                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone" required>
+                                    <input type="text" name="Phone" id="phone" class="form-control" placeholder="Your Phone" >
                                 </div>
                             </div>
                             
                             <div class="col-lg-6 col-md-6">
                                 <div class="field-set mb20">
                                     <span class="d-label fw-bold">Message</span>
-                                    <textarea name="message" id="message" class="form-control" placeholder="Your Message" required></textarea>
+                                    <textarea name="Message" id="message" class="form-control" placeholder="Your Message" ></textarea>
                                 </div>
                             </div>
                         </div>
                             
                         
                         <div class="g-recaptcha" data-sitekey="6LdW03QgAAAAAJko8aINFd1eJUdHlpvT4vNKakj6"></div>
-                        <div id='submit' class="mt20">
-                            <input type='submit' id='send_message' value='Send Message' class="btn-main">
+                        <div id="submit" class="mt20">
+                            <a href="#" id="send_message" class="btn-main" onclick="document.getElementById('contact_form').submit(); return false;">
+                                Send Message
+                            </a>
                         </div>
 
-                        <div id="success_message" class='success'>
+                        {% comment %} <div id="success_message" class='success'>
                             Your message has been sent successfully. Refresh this page if you want to send more messages.
                         </div>
                         <div id="error_message" class='error'>
                             Sorry there was an error sending your form.
-                        </div>
+                        </div> {% endcomment %}
                     </form>
 
                     </div>
@@ -88,4 +91,16 @@
 
 
 {% endblock content %}
+
+{% block custom_js %}
+
+        {% for message in messages %}
+            <script>
+                window.onload = function(){
+                    alert('{{message}}')
+                }
+            </script>
+        {% endfor %}
+
+    {% endblock %}
 
