--- a/electric_motors/templates/dashboard/base.html
+++ b/electric_motors/templates/dashboard/base.html
@@ -7,6 +7,10 @@
     <title>Admin Dashboard</title>
     <!-- boxicon css link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.25/dist/sweetalert2.min.css" rel="stylesheet">
+
     <!-- bootstrap-5 css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'admin_panel/css/style.css' %}">
@@ -25,7 +29,7 @@
             <!-- Navigation link section -->
              <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{% url 'admin_dashboard:Admin_Dashboard' %}" class="sidebar-link">
                         <i class='bx bxs-user-account' ></i>
                         <span>Profile</span>
                     </a>
@@ -48,7 +52,7 @@
                             </a>
                         </li> {% endcomment %}
                         <li class="sidebar-item">
-                            <a href="{% url 'Admin_Register' %}" class="sidebar-link">
+                            <a href="{% url 'admin_dashboard:Admin_Register' %}" class="sidebar-link">
                                 Register
                             </a>
                         </li>
@@ -71,7 +75,7 @@
                             </a>
                             <ul id="multi-two" class="sidebar-dropdown list-unstyled collapse">
                                 <li class="sidebar-item">
-                                    <a href="" class="sidebar-link">Link 1</a>
+                                    <a href="{% url 'admin_dashboard:Add_Vehicle' %}" class="sidebar-link">Add New Vehicle</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a href="" class="sidebar-link">Link 2</a>
@@ -81,7 +85,7 @@
                     </ul>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{% url 'admin_dashboard:Get_User_Data' %}" class="sidebar-link">
                         <i class='bx bxs-bell-ring' ></i>
                         <span>Notification</span>
                     </a>
@@ -94,7 +98,7 @@
                 </li>
              </ul>
              <div class="sidebar-footer">
-                <a href="{% url 'Admin_logout' %}" class="sidebar-link">
+                <a href="{% url 'admin_dashboard:Admin_logout' %}" class="sidebar-link">
                     <i class='bx bx-log-out' ></i>
                     <span>Logout</span>
                 </a>
@@ -147,11 +151,16 @@
 <!-- Js Section -->
 <!-- chartjs link -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.25/dist/sweetalert2.all.min.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{% static 'admin_panel/js/main.js' %}"></script>
+    
     {% block custom_js %}
-      
+        
     {% endblock custom_js %}
 </body>
 </html>
