--- a/electric_motors/templates/dashboard/includes/admin_navbar.html
+++ b/electric_motors/templates/dashboard/includes/admin_navbar.html
@@ -31,7 +31,7 @@
                         <i class='bx bx-cog' ></i>
                         <span>Setting</span>
                     </a>
-                    <a href="{% url 'Admin_logout' %}" class="dropdown-item">
+                    <a href="{% url 'admin_dashboard:Admin_logout' %}" class="dropdown-item">
                         <i class='bx bx-log-out' ></i>
                         <span>Logout</span>
                     </a>
