--- a/electric_motors/templates/dashboard/index.html
+++ b/electric_motors/templates/dashboard/index.html
@@ -61,14 +61,15 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for vehicle in vehicles %}
+                                {% for vehicle in page_number %}
                                 <tr>
                                     <th scope="row">{{vehicle.vehicle_id}}</th>
                                     <td><a href="#"><img src="{{vehicle.vehicle_image.url}}" alt="Vehicle Pic" style="height: 40px;"></a></td>
                                     <td>{{vehicle.vehicle_name}}</td>
                                     <td>
-                                        <a href="#" class="table"><i class='bx bxs-edit'></i></a>
-                                        <a href="#" class="table"><i class='bx bxs-trash' ></i></a>
+                                        
+                                        <a href="{% url 'admin_dashboard:Edit_Vehicle' vehicle.vehicle_id %}" class="table"><i class='bx bxs-edit'></i></a>
+                                        <a href="{% url 'admin_dashboard:Delete_Vehicle' vehicle.vehicle_id %}" class="table delete-vehicle-btn"><i class='bx bxs-trash' ></i></a>
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -91,14 +92,16 @@
                                 {% endif %}
 
                                 {% for page_num in page_number.paginator.page_range %}
-                                    {% if page_number.number == page_num %}
-                                        <li class="page-item active">
-                                            <span class="page-link custom-pagination">{{ page_num }}</span>
-                                        </li>
-                                    {% else %}
-                                        <li class="page-item">
-                                            <a class="page-link custom-pagination" href="?page={{ page_num }}">{{ page_num }}</a>
-                                        </li>
+                                    {% if page_num >= page_number.number|add:'-1' and page_num <= page_number.number|add:'1' %}
+                                        {% if page_number.number == page_num %}
+                                            <li class="page-item active">
+                                                <span class="page-link custom-pagination">{{ page_num }}</span>
+                                            </li>
+                                        {% else %}
+                                            <li class="page-item">
+                                                <a class="page-link custom-pagination" href="?page={{ page_num }}">{{ page_num }}</a>
+                                            </li>
+                                        {% endif %}
                                     {% endif %}
                                 {% endfor %}
                                 {% if page_number.has_next %}
@@ -136,3 +139,47 @@
     {% include "dashboard/includes/admin_footer.html" %}
 <!-- footer section ends -->
 {% endblock content %}
+
+{% block custom_js %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const deleteLinks = document.querySelectorAll(".delete-vehicle-btn");
+        
+            deleteLinks.forEach(function(link) {
+                link.addEventListener("click", function(event) {
+                    event.preventDefault(); // Prevent default redirection
+        
+                    // Show SweetAlert confirmation
+                    Swal.fire({
+                        title: 'Are you sure?',
+                        text: "You won't be able to undo this!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#d33',
+                        cancelButtonColor: '#3085d6',
+                        confirmButtonText: 'Yes, delete it!',
+                        cancelButtonText: 'Cancel',
+                        allowOutsideClick: false // Disable closing when clicking outside the message box
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            // If confirmed, redirect to the delete URL
+                            window.location.href = this.href;
+                        }
+                    });
+                });
+            });
+            // SweetAlert for Django messages
+            {% if messages %}
+                {% for message in messages %}
+                    Swal.fire({
+                        icon: '{% if message.tags == "success" %}success{% elif message.tags == "error" %}error{% elif message.tags == "warning" %}warning{% else %}info{% endif %}',
+                        title: '{{ message.tags|title }}',
+                        text: '{{ message }}',
+                        confirmButtonColor: '#3085d6'
+                    });
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
+    
+{% endblock custom_js %}
